assets/css/style.css
/* CSS variables */
/* ********************* */
:root {
    /* colors */
    /* text */
    --text-secondary: rgb(181, 70, 15);
    --clr-card-text: rgb(51, 51, 51);
    --clr-timer-text:rgb(97, 97, 97);

    /* background */
    --bg-body: #F0F9F9;

    /* icons */
    --clr-icon-timer:rgb(17, 119, 119);

    /* borders */
    --clr-border: gold;
    /*
    */

    /* fonts */
    --txt-primary: 'Poppins', sans-serif;
    --txt-medium: 300;
    --txt-bold: 700;
    --text-dark: rgb(17, 17,17);
}


/* base CSS */
/* ************************** */
body {
    background-color: var(--bg-body);
    font-family: var(--txt-primary);
}

a {
    text-decoration: none;
    color: var(--clr-card-text);
}

/* repeatable CSS */
.navbar-text {
    font-weight: var(--txt-bold);
    font-size: 1.121rem;
}

.arrow-left {
    font-size: 2rem;
    font-weight: var(--txt-dark);
}
.arrow-left:hover {
    color: rgb(128, 128, 128);
}

.recipe-text-bold {
    font-weight: var(--txt-bold);
}
.recipe-text {
    font-size: 1.1rem;
    margin: .8rem 0;
}

.card-container {
    margin: 2.45rem 0;
    padding: .8rem 0;
}

.card-subtitle {
    font-size: 1.1rem;
}
.left-padding {
    padding-left: .8rem;
}

.recipe-step {
    font-size: 1.02rem;
    line-height: 1.6;
}
/* Custom CSS */
/* ************************** */
.navbar-collapse {
    justify-content: flex-end;
}

header {
    border-bottom: 1px solid var(--clr-border);
}

.navbar-brand {
    width: 60px;
    margin: 0 auto;
    font-weight: var();
}

.about-text {
    color: var(--text-dark);
}

.main-title {
    font-weight: var(--txt-bold);
}

.main-para {
    font-size: 1.254rem;
    font-weight: var(--txt-medium);
}

.card {
    border: none;
}

.card,
.card-img-top {
    border-radius: 0;
}

.img__attribution {
    font-size: .8rem;
}

.card-title {
    color: var(--text-secondary);
}
.card-text:hover {
    text-decoration: underline;
}

.card-text {
    font-size: 1.857rem;
}

.card-body {
    font-size: 1.375rem;
    line-height: 1.22;
    color: var(--clr-card-text);
}

.card-footer {
    background: none;
    border: none;
}

.card__footer-icon,
.img__attribution{
    color: var(--clr-icon-timer);
}

.card__footer-time {
    color: var(--clr-timer-text);
}

/* explore recipes */
.explore__wrapper {
    padding-top: 3rem;
}

.explore__recipes {
    font-size: 1.2rem;
}

.explore__options {
    border-bottom: 1px solid;
    padding-bottom: .5rem;
}
.explore__recipes:hover {
    color: var(--text-secondary);
}

.small__card-attribution {
    font-size: .6rem;
}

.small__card-title {
    font-size: .8rem;
}

.recipes-container .card-img-top {
    height: 12vh;
    object-fit: cover;
    max-height: max-content;
    }

.main-footer {
    border-top: 2px solid var(--clr-border);
    padding: 3rem 0;
    gap: 1.232rem;
    text-align: center;
    line-height: 1.5;
}

.list-group-item {
    border: none;
}

@media (min-width: 576px) {
    .card-img-top,
    .recipes-container .card-img-top {
        height: 16vh;
        object-fit: cover;
        max-height: max-content;
        }
}

@media (min-width: 700px) {
    .card-img-top,
    .recipes-container .card-img-top {
        height: 40vh;
    }
}


@media (min-width: 992px) {
    .small-card-text {
        font-size: 1.6rem;
    }
    .card-img-top {
        height: 18vh;
    }

    .recipe-main {
        max-width: 900px;
    }

    .navbar-brand {
        margin-left: 3rem;
    }
}

@media (min-width: 1040px) {
    .card-img-top {
        height: 22vh;
        object-fit: cover;
        max-height: max-content;
        }
    .horizontal {
        width:320px;
    }
    .font-xl {
        font-size: 2.3rem;
    }
}

